node_api.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: node-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: universidad
  template:
    metadata:
      labels:
        app: universidad
    spec:
      containers:
        - name: universidad
          image: 19240532/universidad:v1.0

          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
spec:
  selector:
    app: node-api
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
